Fix some warnings (javac, IntelliJ, Sonar)